--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.xceptance.neodymium.project</groupId>
-	<artifactId>neodymium-template</artifactId>
+	<artifactId>neodymium-showcase</artifactId>
 	<version>3.5.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>neodymium-template</name>
-	<url>https://github.com/Xceptance/neodymium-template</url>
+	<name>neodymium-showcase</name>
+	<url>https://github.com/Xceptance/neodymium-showcase</url>
 	<organization>
 		<name>Xceptance Software Technologies</name>
 		<url>https://www.xceptance.com/</url>
@@ -107,7 +107,8 @@
 								<include>template/cucumber/tests/RunAllFeaturesTest.java</include>
 							</includes>
 							<systemPropertyVariables>
-								<cucumber.options>--plugin io.qameta.allure.cucumber4jvm.AllureCucumber4Jvm</cucumber.options>
+								<cucumber.options>--plugin
+									io.qameta.allure.cucumber4jvm.AllureCucumber4Jvm</cucumber.options>
 							</systemPropertyVariables>
 						</configuration>
 					</plugin>
@@ -122,6 +123,17 @@
 			<artifactId>neodymium-library</artifactId>
 			<version>${neodymium.version}</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.codeborne</groupId>
+					<artifactId>selenide</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.codeborne</groupId>
+			<artifactId>selenide</artifactId>
+			<version>5.10.0</version>
 		</dependency>
 	</dependencies>
 
