Created first testclasses
Created SliderTest and TextTest and added first testfunctions.
Tests are workinprogress

--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -1,9 +1,11 @@
-neodymium.url = ${neodymium.url.protocol}://${neodymium.url.host}${neodymium.url.path}
+neodymium.url = ${neodymium.url.host}
+# ${neodymium.url.protocol}://
+# ${neodymium.url.path}
 neodymium.url.protocol = https
 # url.host = comes from credentials 
-neodymium.url.host = www.xceptance.com
-neodymium.url.path = ${neodymium.url.port}/${neodymium.url.site}/
-neodymium.url.port = :443
+neodymium.url.host = https://javascript.info/shadow-dom
+#neodymium.url.path = ${neodymium.url.port}/${neodymium.url.site}/
+#neodymium.url.port = 0
 
 neodymium.url.site = en
 neodymium.locale = en_US
@@ -15,7 +17,7 @@ neodymium.debugUtils.highlight.duration = 100
 
 ## The path to the driver server executable, if the respective driver requires
 ## one. If you do not specify a path, the driver server must be in your PATH.
-#neodymium.webDriver.chrome.pathToDriverServer =  C:/dev/webdriver/chromedriver.exe
+neodymium.webDriver.chrome.pathToDriverServer = C:/Users/gkunze/Documents/Webdriver/chromedriver.exe
 #neodymium.webDriver.edge.pathToDriverServer = c:/path/to/MicrosoftWebDriver.exe
 #neodymium.webDriver.firefox.pathToDriverServer = C:/dev/webdriver/geckodriver.exe
 #neodymium.webDriver.ie.pathToDriverServer = c:/path/to/IEDriverServer.exe
