removed user specific configuration

--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -17,7 +17,7 @@ neodymium.debugUtils.highlight.duration = 100
 
 ## The path to the driver server executable, if the respective driver requires
 ## one. If you do not specify a path, the driver server must be in your PATH.
-neodymium.webDriver.chrome.pathToDriverServer = C:/Users/gkunze/Documents/Webdriver/chromedriver.exe
+#neodymium.webDriver.chrome.pathToDriverServer = c:/path/to/chromedriver.exe
 #neodymium.webDriver.edge.pathToDriverServer = c:/path/to/MicrosoftWebDriver.exe
 #neodymium.webDriver.firefox.pathToDriverServer = C:/dev/webdriver/geckodriver.exe
 #neodymium.webDriver.ie.pathToDriverServer = c:/path/to/IEDriverServer.exe
