--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -10,7 +10,7 @@ neodymium.url.host = https://javascript.info/shadow-dom
 neodymium.url.site = en
 neodymium.locale = en_US
 
-neodymium.debugUtils.highlight = true
+neodymium.debugUtils.highlight = false
 neodymium.debugUtils.highlight.duration = 100
 
 ################################################################################
