--- a/config/localization.yaml
+++ b/config/localization.yaml
@@ -1,11 +1,13 @@
 default:
-  homepage:
+  homepage: 
+    url: https://www.xceptance.com/en/
     title: Xceptance - The Software Testing Experts 
     headline: Committed to Software Quality
     subtitle: We help out Clients optimize software testing and quality assurance
     
 de:
-  homepage:
+  homepage: 
+    url: https://www.xceptance.com/de/
     title: Xceptance - Qualitätssicherung von Software
     headline: Der Qualität von Software verpflichtet
    
