Initial Check in
Created Basic Authtenticaiton Test

--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -13,6 +13,11 @@ neodymium.locale = en_US
 neodymium.debugUtils.highlight = false
 neodymium.debugUtils.highlight.duration = 100
 
+neodymium.localproxy = true
+neodymium.url.host = https://localhost:8443/webdav/
+neodymium.basicauth.username = webdav
+neodymium.basicauth.password = webdav
+
 ################################################################################
 
 ## The path to the driver server executable, if the respective driver requires
