--- a/config/browser.properties
+++ b/config/browser.properties
@@ -89,11 +89,13 @@
 browserprofile.Chrome_1024x768.name = Chrome 1024x768
 browserprofile.Chrome_1024x768.browser = chrome
 browserprofile.Chrome_1024x768.browserResolution = 1024x768
+browserprofile.Chrome_1024x768.arguments = -ignore-certificate-errors
 
 # Local Chrome but with larger window size
 browserprofile.Chrome_1500x1000.name = Chrome 1500x1000
 browserprofile.Chrome_1500x1000.browser = chrome
 browserprofile.Chrome_1500x1000.browserResolution = 1500x1000
+browserprofile.Chrome_1500x1000.arguments = -ignore-certificate-errors
 
 # Small Firefox
 browserprofile.FF_1024x768.name = Firefox 1024x768
