Added Testcase for specific Page
#8

--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -3,7 +3,8 @@ neodymium.url = ${neodymium.url.host}
 # ${neodymium.url.path}
 neodymium.url.protocol = https
 # url.host = comes from credentials 
-neodymium.url.host = https://javascript.info/shadow-dom
+neodymium.url.host = authenticationtest.com
+
 #neodymium.url.path = ${neodymium.url.port}/${neodymium.url.site}/
 #neodymium.url.port = 0
 
@@ -14,9 +15,8 @@ neodymium.debugUtils.highlight = false
 neodymium.debugUtils.highlight.duration = 100
 
 neodymium.localproxy = true
-neodymium.url.host = https://localhost:8443/webdav/
-neodymium.basicauth.username = webdav
-neodymium.basicauth.password = webdav
+neodymium.basicauth.username = User
+neodymium.basicauth.password = Pass
 
 ################################################################################
 
