--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -18,6 +18,12 @@ neodymium.localproxy = true
 neodymium.basicauth.username = User
 neodymium.basicauth.password = Pass
 
+neodymium.localproxy.certificate = true
+neodymium.localproxy.certificate.archiveFile = ./config/Certificate.pfx
+neodymium.localproxy.certificate.archivetype = PKCS12
+neodymium.localproxy.certificate.name = MITMRootCertificate
+neodymium.localproxy.certificate.password = MITMCertificatePassword
+
 ################################################################################
 
 ## The path to the driver server executable, if the respective driver requires
