Added MITM proxy showcase
Added MITM proxy showcase and some comments. #8

--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -14,14 +14,14 @@ neodymium.locale = en_US
 neodymium.debugUtils.highlight = false
 neodymium.debugUtils.highlight.duration = 100
 
-neodymium.localproxy = true
+neodymium.localproxy = false
 neodymium.basicauth.username = User
 neodymium.basicauth.password = Pass
 
-neodymium.localproxy.certificate = true
+neodymium.localproxy.certificate = false
 neodymium.localproxy.certificate.archiveFile = ./config/Certificate.pfx
 neodymium.localproxy.certificate.archivetype = PKCS12
-neodymium.localproxy.certificate.name = MITMRootCertificate
+neodymium.localproxy.certificate.name = e6f60fbd-f9f3-436f-aba5-452861ae4570
 neodymium.localproxy.certificate.password = MITMCertificatePassword
 
 ################################################################################
