Added ignore certificate to all browserprofils
#19

--- a/config/browser.properties
+++ b/config/browser.properties
@@ -89,21 +89,25 @@
 browserprofile.Chrome_1024x768.name = Chrome 1024x768
 browserprofile.Chrome_1024x768.browser = chrome
 browserprofile.Chrome_1024x768.browserResolution = 1024x768
+browserprofile.Chrome_1024x768.arguments = -ignore-certificate-errors
 
 # Local Chrome but with larger window size
 browserprofile.Chrome_1500x1000.name = Chrome 1500x1000
 browserprofile.Chrome_1500x1000.browser = chrome
 browserprofile.Chrome_1500x1000.browserResolution = 1500x1000
+browserprofile.Chrome_1500x1000.arguments = -ignore-certificate-errors
 
 # Small Firefox
 browserprofile.FF_1024x768.name = Firefox 1024x768
 browserprofile.FF_1024x768.browser = firefox
 browserprofile.FF_1024x768.browserResolution = 1024x768
+browserprofile.FF_1024x768.arguments = -ignore-certificate-errors
 
 # Local Firefox but with larger window size
 browserprofile.FF_1500x1000.name = Latest local Firefox 1500x1000
 browserprofile.FF_1500x1000.browser = firefox
 browserprofile.FF_1500x1000.screenResolution = 1500x1000
+browserprofile.FF_1500x1000.arguments = -ignore-certificate-errors
 
 browserprofile.Galaxy_Note3_Emulation.name Samsung Galaxy Note 3 Chrome Emulation
 browserprofile.Galaxy_Note3_Emulation.browser = chrome
