fixed localization file

--- a/config/localization.yaml
+++ b/config/localization.yaml
@@ -2,7 +2,7 @@ default:
   homepage:
     title: Xceptance - The Software Testing Experts 
     headline: Committed to Software Quality
-    subtitle: We help out Clients optimize software testing and quality assurance
+    subtitle: We help our clients optimize software testing and quality assurance
     
 de:
   homepage:
