--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -12,12 +12,19 @@ neodymium.url.site = en
 neodymium.locale = en_US
 
 neodymium.debugUtils.highlight = false
-neodymium.debugUtils.highlight.duration = 100
+neodymium.debugUtils.highlight.duration = 1000
 
+#
+# Neodymium Local Proxy runs an embedded proxy in the test execution process
+# HTTP Basic access Authentication information is automatically added to the HTTP header
+# 
+# RELATED SHOW CASES
+# - NeodymiumLocalProxyBasicAuthentication
+# - NeodymiumSelenideBasicAuthentication
 neodymium.localproxy = false
 neodymium.basicauth.username = User
 neodymium.basicauth.password = Pass
-
+#
 neodymium.localproxy.certificate = false
 neodymium.localproxy.certificate.archiveFile = ./config/Certificate.pfx
 neodymium.localproxy.certificate.archivetype = PKCS12
