--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -21,17 +21,16 @@ neodymium.debugUtils.highlight.duration = 1000
 # RELATED SHOW CASES
 # - NeodymiumLocalProxyBasicAuthentication
 # - NeodymiumSelenideBasicAuthentication
+# - NeodymiumLocalProxyCertificateAuthentication
 neodymium.localproxy = false
 neodymium.basicauth.username = User
 neodymium.basicauth.password = Pass
-#
 neodymium.localproxy.certificate = false
 neodymium.localproxy.certificate.archiveFile = ./config/Certificate.pfx
 neodymium.localproxy.certificate.archivetype = PKCS12
 neodymium.localproxy.certificate.name = e6f60fbd-f9f3-436f-aba5-452861ae4570
 neodymium.localproxy.certificate.password = MITMCertificatePassword
-
-################################################################################
+#
 
 ## The path to the driver server executable, if the respective driver requires
 ## one. If you do not specify a path, the driver server must be in your PATH.
