#22 adjusted wording, format and some code within NeodymiumLocalProxyBasicAuthentication

--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -7,13 +7,14 @@
 #
 # MANDATORY SETTINGS
 #
-# Chrome Webdriver
-# To run any showcase the Chrome Webdriver must be installed before.
+# Chrome WebdDriver
+# To run any showcase the Chrome WebDriver must be installed before.
 # See: https://github.com/Xceptance/neodymium-library/wiki/How-to-set-up-a-WebDriver
-neodymium.webDriver.chrome.pathToDriverServer = c:/path/to/chromedriver.exe
+# Configure 
+# neodymium.webDriver.chrome.pathToDriverServer = c:/path/to/chromedriver.exe
 #
 
-#
+
 # Neodymium Local Proxy runs an embedded proxy in the test execution process
 # HTTP Basic access Authentication information is automatically added to the HTTP header
 # 
