#22 adjusted wording and format within NeodymiumLocalProxyBasicAuthentication

--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -7,7 +7,7 @@
 #
 # MANDATORY SETTINGS
 #
-# Chrome WebdDriver
+# Chrome WebDriver
 # To run any showcase the Chrome WebDriver must be installed before.
 # See: https://github.com/Xceptance/neodymium-library/wiki/How-to-set-up-a-WebDriver
 # Configure 
@@ -15,7 +15,7 @@
 #
 
 
-# Neodymium Local Proxy runs an embedded proxy in the test execution process
+# Neodymium can run an embedded proxy in the test execution process
 # HTTP Basic access Authentication information is automatically added to the HTTP header
 # 
 # RELATED SHOW CASES
@@ -23,7 +23,7 @@
 # - SelenideBasicAuthentication
 # - NeodymiumLocalProxyCertificateAuthentication
 # - NeodymiumLocalProxyCertificateAuthenticationHost
-neodymium.localproxy = false
+neodymium.localproxy = true
 neodymium.url.host = authenticationtest.com
 neodymium.basicauth.username = User
 neodymium.basicauth.password = Pass
