refactored showcase for XCMailr plugin

--- a/config/xcmailr.properties
+++ b/config/xcmailr.properties
@@ -1,8 +1,8 @@
 # API token to authenticate with the XcMailr server, required
-xcmailr.apiToken = 
-
+# xcmailr.apiToken =  
+#
 # URL to access the XcMailr server and web site
-# xcmailr.url = https://xcmailr.xceptance.de
+# xcmailr.url = 
 #
 # Period during which the created temporary email should be active
 # xcmailr.temporaryMailValidMinutes = 15
