change the test case description to JavaDoc to prevend the issues due to formation try to  make test case description more clear

--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -23,11 +23,12 @@
 # - SelenideBasicAuthentication
 # - NeodymiumLocalProxyCertificateAuthentication
 # - NeodymiumLocalProxyCertificateAuthenticationHost
-neodymium.localproxy = true
+neodymium.localproxy = false
 neodymium.url.host = authenticationtest.com
 neodymium.basicauth.username = User
 neodymium.basicauth.password = Pass
 neodymium.localproxy.certificate = true
+neodymium.localproxy.certificate.generate = true
 neodymium.localproxy.certificate.archiveFile = ./config/Certificate.pfx
 neodymium.localproxy.certificate.archivetype = PKCS12
 neodymium.localproxy.certificate.name = e6f60fbd-f9f3-436f-aba5-452861ae4570
