improved localization showcase

--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -3,8 +3,6 @@
 # - Refer to Github Xceptance neodymium-library to have the latest maintained list of supported settings at
 #   https://github.com/Xceptance/neodymium-library/blob/master/config/neodymium.properties
 #
-
-#
 # MANDATORY SETTINGS
 #
 # Chrome WebDriver
@@ -14,11 +12,13 @@
 # neodymium.webDriver.chrome.pathToDriverServer = c:/path/to/chromedriver.exe
 #
 
+# Neodymium allows to set a default locale to support the most common test cases
+# - NeodymiumLocalizationTest
+neodymium.locale = en_US
 
 # Neodymium can run an embedded proxy in the test execution process
 # HTTP Basic access Authentication information is automatically added to the HTTP header
-# 
-# RELATED SHOW CASES
+# RELATED SHOW CASES:
 # - NeodymiumLocalProxyBasicAuthentication
 # - SelenideBasicAuthentication
 # - NeodymiumLocalProxyCertificateAuthentication
