--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -9,7 +9,7 @@
 # To run any show case the Chrome WebDriver must be installed before.
 # See: https://github.com/Xceptance/neodymium-library/wiki/How-to-set-up-a-WebDriver
 # Configure 
-# neodymium.webDriver.chrome.pathToDriverServer = c:/path/to/chromedriver.exe
+neodymium.webDriver.chrome.pathToDriverServer = C:/Users/uwe/Documents/WebDriver/chromedriver.exe
 #
 
 # Neodymium allows to set a default locale to support the most common test cases
@@ -23,7 +23,7 @@ neodymium.locale = en_US
 # - SelenideBasicAuthentication
 # - NeodymiumLocalProxyCertificateAuthentication
 # - NeodymiumLocalProxyCertificateAuthenticationHost
-neodymium.localproxy = false
+neodymium.localproxy = true
 neodymium.url.host = authenticationtest.com
 neodymium.basicauth.username = User
 neodymium.basicauth.password = Pass
