--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -9,7 +9,7 @@
 # To run any show case the Chrome WebDriver must be installed before.
 # See: https://github.com/Xceptance/neodymium-library/wiki/How-to-set-up-a-WebDriver
 # Configure 
-neodymium.webDriver.chrome.pathToDriverServer = C:/Users/uwe/Documents/WebDriver/chromedriver.exe
+# neodymium.webDriver.chrome.pathToDriverServer = c:/path/to/chromedriver.exe
 #
 # The following long value will be use to initialize Neodymiums Random instance.  
 #neodymium.context.random.initialValue = 123456789
@@ -25,7 +25,7 @@ neodymium.locale = en_US
 # - SelenideBasicAuthentication
 # - NeodymiumLocalProxyCertificateAuthentication
 # - NeodymiumLocalProxyCertificateAuthenticationHost
-neodymium.localproxy = true
+neodymium.localproxy = false
 neodymium.url.host = authenticationtest.com
 neodymium.basicauth.username = User
 neodymium.basicauth.password = Pass
