Logging test added

--- a/src/test/resources/log4j2.properties
+++ b/src/test/resources/log4j2.properties
@@ -12,7 +12,7 @@ status = error
 name = NeodymiumConfiguration
 
 property.filename = target/log/error.log
-property.projectPath = neodymium-cucumber-example
+property.projectPath = neodymium-showcase
 
 appender.console.type = Console
 appender.console.name = STDOUT
