--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,12 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 		<surefire.version>2.22.2</surefire.version>
-		<aspectj.version>1.9.6</aspectj.version>
-		<allure.version>2.10.0</allure.version>
-		<neodymium.version>4.1.5</neodymium.version>
+		<aspectj.version>1.9.21</aspectj.version>
+		<allure.version>2.12.0</allure.version>
+		<neodymium.version>5.0.0</neodymium.version>
 		<pdfbox.version>2.0.24</pdfbox.version>
 	</properties>
 
@@ -89,7 +89,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<source>11</source>
+					<source>17</source>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -117,6 +117,12 @@
 			<artifactId>neodymium-plugin-xcmailr</artifactId>
 			<version>1.1.3</version>
 		</dependency>
+		<dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j2-impl</artifactId>
+      <version>2.23.1</version>
+      <scope>test</scope>
+    </dependency>
 	</dependencies>
 
 	<reporting>
