--- a/pom.xml
+++ b/pom.xml
@@ -1,137 +1,139 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.xceptance.neodymium.project</groupId>
-	<artifactId>neodymium-showcase</artifactId>
-	<version>5.0.2</version>
-	<packaging>jar</packaging>
+    <groupId>com.xceptance.neodymium.project</groupId>
+    <artifactId>neodymium-showcase</artifactId>
+    <version>5.1.1</version>
+    <packaging>jar</packaging>
 
-	<name>neodymium-showcase</name>
-	<url>https://github.com/Xceptance/neodymium-showcase</url>
-	<organization>
-		<name>Xceptance Software Technologies</name>
-		<url>https://www.xceptance.com/</url>
-	</organization>
+    <name>neodymium-showcase</name>
+    <url>https://github.com/Xceptance/neodymium-showcase</url>
+    <organization>
+        <name>Xceptance Software Technologies</name>
+        <url>https://www.xceptance.com/</url>
+    </organization>
 
-	<licenses>
-		<license>
-			<name>MIT</name>
-			<url>https://opensource.org/licenses/MIT</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
+    <licenses>
+        <license>
+            <name>MIT</name>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
-		<surefire.version>2.22.2</surefire.version>
-		<aspectj.version>1.9.21</aspectj.version>
-		<allure.version>2.12.0</allure.version>
-		<neodymium.version>5.0.2</neodymium.version>
-		<pdfbox.version>2.0.24</pdfbox.version>
-	</properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <surefire.version>2.22.2</surefire.version>
+        <aspectj.version>1.9.21</aspectj.version>
+        <allure.version>2.12.0</allure.version>
+        <neodymium.version>5.1.1</neodymium.version>
+        <pdfbox.version>2.0.24</pdfbox.version>
+    </properties>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${surefire.version}</version>
-				<configuration>
-					<forkCount>1</forkCount>
-					<testFailureIgnore>true</testFailureIgnore>
-					<includes>
-						<!-- Neodymium (pure Java) test cases -->
-						<include>showcase/neodymium/tests/**/*Test.java</include>
-					</includes>
-					<argLine>-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"</argLine>
-					<properties>
-						<property>
-							<name>listener</name>
-							<value>io.qameta.allure.junit4.AllureJunit4</value>
-						</property>
-					</properties>
-					<systemPropertyVariables>
-						<allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
-						<selenide.reports>${project.build.directory}/selenide-results</selenide.reports>
-					</systemPropertyVariables>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.aspectj</groupId>
-						<artifactId>aspectjweaver</artifactId>
-						<version>${aspectj.version}</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-			<plugin>
-				<groupId>io.qameta.allure</groupId>
-				<artifactId>allure-maven</artifactId>
-				<version>${allure.version}</version>
-				<configuration>
-					<reportVersion>${allure.version}</reportVersion>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.2.0</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-							<goal>test-jar</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<source>17</source>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.version}</version>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <includes>
+                        <!-- Neodymium (pure Java) test cases -->
+                        <include>showcase/neodymium/tests/**/*Test.java</include>
+                    </includes>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
+                    <properties>
+                        <property>
+                            <name>listener</name>
+                            <value>io.qameta.allure.junit4.AllureJunit4</value>
+                        </property>
+                    </properties>
+                    <systemPropertyVariables>
+                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
+                        <selenide.reports>${project.build.directory}/selenide-results</selenide.reports>
+                    </systemPropertyVariables>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>${allure.version}</version>
+                <configuration>
+                    <reportVersion>2.27.0</reportVersion>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <source>17</source>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.xceptance</groupId>
-			<artifactId>neodymium-library</artifactId>
-			<version>${neodymium.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<!-- The pdfbox dependency is added here to show how PDF files can be 
-				checked with a Neodymium test case using another available technology like 
-				pdfbox. RELATED SHOWCASE - PdfTextContentCheckTest -->
-			<groupId>org.apache.pdfbox</groupId>
-			<artifactId>pdfbox</artifactId>
-			<version>${pdfbox.version}</version>
-		</dependency>
-		<dependency>
-			<!-- The XCMailr plugin dependency is added here to show how retrieve 
-				and validate e-mails with a Neodymium test case. RELATED SHOWCASE: - XCMailrTest -->
-			<groupId>com.xceptance</groupId>
-			<artifactId>neodymium-plugin-xcmailr</artifactId>
-			<version>1.1.3</version>
-		</dependency>
-		<dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j2-impl</artifactId>
-      <version>2.23.1</version>
-      <scope>test</scope>
-    </dependency>
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.xceptance</groupId>
+            <artifactId>neodymium-library</artifactId>
+            <version>${neodymium.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <!-- The pdfbox dependency is added here to show how PDF files can be
+                checked with a Neodymium test case using another available technology like
+                pdfbox. RELATED SHOWCASE - PdfTextContentCheckTest -->
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>${pdfbox.version}</version>
+        </dependency>
+        <dependency>
+            <!-- The XCMailr plugin dependency is added here to show how retrieve
+                and validate e-mails with a Neodymium test case. RELATED SHOWCASE: - XCMailrTest -->
+            <groupId>com.xceptance</groupId>
+            <artifactId>neodymium-plugin-xcmailr</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+            <version>2.23.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>${surefire.version}</version>
-			</plugin>
-		</plugins>
-	</reporting>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>${surefire.version}</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
