--- a/config/neodymium.properties
+++ b/config/neodymium.properties
@@ -8,14 +8,16 @@
 # Chrome WebDriver
 # To run any showcase the Chrome WebDriver must be installed before.
 # See: https://github.com/Xceptance/neodymium-library/wiki/How-to-set-up-a-WebDriver
-# Configure 
+# Configure
 # neodymium.webDriver.chrome.pathToDriverServer = c:/path/to/chromedriver.exe
 #
-# The following long value will be use to initialize Neodymiums Random instance.  
+# The following long value will be use to initialize Neodymiums Random instance.
 #neodymium.context.random.initialValue = 123456789
+
 # Neodymium allows to set a default locale to support the most common test cases
 # - NeodymiumLocalizationTest
-neodymium.locale=en_US
+neodymium.locale = en_US
+
 # Neodymium can run an embedded proxy in the test execution process
 # HTTP Basic access Authentication information is automatically added to the HTTP header
 # RELATED SHOWCASES:
@@ -23,14 +25,14 @@ neodymium.locale=en_US
 # - SelenideBasicAuthentication
 # - NeodymiumLocalProxyCertificateAuthentication
 # - NeodymiumLocalProxyCertificateAuthenticationHost
-neodymium.localproxy=false
-neodymium.url.host=authenticationtest.com
-neodymium.basicauth.username=User
-neodymium.basicauth.password=Pass
-neodymium.localproxy.certificate=true
-neodymium.localproxy.certificate.generate=true
-neodymium.localproxy.certificate.archiveFile=./config/Certificate.pfx
-neodymium.localproxy.certificate.archivetype=PKCS12
-neodymium.localproxy.certificate.name=e6f60fbd-f9f3-436f-aba5-452861ae4570
-neodymium.localproxy.certificate.password=MITMCertificatePassword
+neodymium.localproxy = false
+neodymium.url.host = authenticationtest.com
+neodymium.basicauth.username = User
+neodymium.basicauth.password = Pass
+neodymium.localproxy.certificate = true
+neodymium.localproxy.certificate.generate = true
+neodymium.localproxy.certificate.archiveFile = ./config/Certificate.pfx
+neodymium.localproxy.certificate.archivetype = PKCS12
+neodymium.localproxy.certificate.name = e6f60fbd-f9f3-436f-aba5-452861ae4570
+neodymium.localproxy.certificate.password = MITMCertificatePassword
 #
