Updated REST example due to API change

--- a/config/api.properties
+++ b/config/api.properties
@@ -1,7 +1,9 @@
+# This uses https://fakeapi.platzi.com/
+
 # ========== logging configuration ========== #
 
-logging.request = false
-logging.response = false
+logging.request = true
+logging.response = true
 
 # ========== routes configuration ========== #
 
